--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
       <div class="features">
         <img
           src="img/illustrations/digital-lazy.jpg"
-          data-src="img/digital.jpg"
+          data-src="img/illustrations/digital.jpg"
           alt="Computer"
           class="features__img lazy-img"
         />
         <div class="features__feature">
           <div class="features__icon">
             <svg>
-              <use xlink:href="img/icons.svg#icon-monitor"></use>
+              <use xlink:href="img/icons/icons.svg#icon-monitor"></use>
             </svg>
           </div>
           <h5 class="features__header">100% digital bank</h5>
@@ -91,7 +91,7 @@
         <div class="features__feature">
           <div class="features__icon">
             <svg>
-              <use xlink:href="img/icons.svg#icon-trending-up"></use>
+              <use xlink:href="img/icons/icons.svg#icon-trending-up"></use>
             </svg>
           </div>
           <h5 class="features__header">Watch your money grow</h5>
@@ -103,21 +103,21 @@
         </div>
         <img
           src="img/illustrations/grow-lazy.jpg"
-          data-src="img/grow.jpg"
+          data-src="img/illustrations/grow.jpg"
           alt="Plant"
           class="features__img lazy-img"
         />
 
         <img
           src="img/illustrations/card-lazy.jpg"
-          data-src="img/card.jpg"
+          data-src="img/illustrations/card.jpg"
           alt="Credit card"
           class="features__img lazy-img"
         />
         <div class="features__feature">
           <div class="features__icon">
             <svg>
-              <use xlink:href="img/icons.svg#icon-credit-card"></use>
+              <use xlink:href="img/icons/icons.svg#icon-credit-card"></use>
             </svg>
           </div>
           <h5 class="features__header">Free debit card included</h5>
@@ -158,7 +158,7 @@
         >
           <div class="operations__icon operations__icon--1">
             <svg>
-              <use xlink:href="img/icons.svg#icon-upload"></use>
+              <use xlink:href="img/icons/icons.svg#icon-upload"></use>
             </svg>
           </div>
           <h5 class="operations__header">
@@ -175,7 +175,7 @@
         <div class="operations__content operations__content--2">
           <div class="operations__icon operations__icon--2">
             <svg>
-              <use xlink:href="img/icons.svg#icon-home"></use>
+              <use xlink:href="img/icons/icons.svg#icon-home"></use>
             </svg>
           </div>
           <h5 class="operations__header">
@@ -191,7 +191,7 @@
         <div class="operations__content operations__content--3">
           <div class="operations__icon operations__icon--3">
             <svg>
-              <use xlink:href="img/icons.svg#icon-user-x"></use>
+              <use xlink:href="img/icons/icons.svg#icon-user-x"></use>
             </svg>
           </div>
           <h5 class="operations__header">
