--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                            href="#section--3">Testimonials</a>
                     </li>
                     <li class="nav__item">
+                        <a class="nav__link"
+                           href="#section--4">Images</a>
+                    </li>
+                    <li class="nav__item">
                         <a class="nav__link nav__link--btn btn--show-modal"
                            href="#"
                         >Open account</a
@@ -50,7 +54,7 @@
                     </li>
                 </ul>
             </nav>
-            
+
             <div class="header__title">
                 <h1>
                     When
@@ -296,13 +300,32 @@
                         </address>
                     </div>
                 </div>
-
-                <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
-                <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
-                <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
-                <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
                 <button class="slider__btn slider__btn--left">&larr;</button>
                 <button class="slider__btn slider__btn--right">&rarr;</button>
+                <div class="dots"></div>
+            </div>
+        </section>
+
+        <section class="section"
+                 id="section--4">
+            <div class="section__title section__title--testimonials">
+                <h2 class="section__description">For your eyes.</h2>
+                <h3 class="section__header">
+                    Multiple images made by our customers. Enjoy!
+                </h3>
+            </div>
+
+            <div class="slider-img">
+                <div class="slide-img"><img alt="Photo 1"
+                                            src="img/illustrations/img-1.jpg"/></div>
+                <div class="slide-img"><img alt="Photo 2"
+                                            src="img/illustrations/img-2.jpg"/></div>
+                <div class="slide-img"><img alt="Photo 3"
+                                            src="img/illustrations/img-3.jpg"/></div>
+                <div class="slide-img"><img alt="Photo 4"
+                                            src="img/illustrations/img-4.jpg"/></div>
+                <button class="slider__btn slider__btn--left--img">&larr;</button>
+                <button class="slider__btn slider__btn--right--img">&rarr;</button>
                 <div class="dots"></div>
             </div>
         </section>
