--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
             </div>
         </section>
-
+        <!--
         <section class="section"
                  id="section--3">
             <div class="section__title section__title--testimonials">
@@ -303,11 +303,11 @@
                 <button class="slider__btn slider__btn--left">&larr;</button>
                 <button class="slider__btn slider__btn--right">&rarr;</button>
                 <div class="dots"></div>
-            </div>
-        </section>
+            </div> 
+        </section>-->
 
         <section class="section"
-                 id="section--4">
+                 id="section--3">
             <div class="section__title section__title--testimonials">
                 <h2 class="section__description">For your eyes.</h2>
                 <h3 class="section__header">
@@ -326,7 +326,7 @@
                                             src="img/illustrations/img-4.jpg"/></div>
                 <button class="slider__btn slider__btn--left--img">&larr;</button>
                 <button class="slider__btn slider__btn--right--img">&rarr;</button>
-                <div class="dots"></div>
+                <div class="dots-img"></div>
             </div>
         </section>
 
