--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                         <a class="nav__link"
                            href="#section--2">Operations</a>
                     </li>
-                    <li class="nav__item">
+                    <!--<li class="nav__item">
                         <a class="nav__link"
                            href="#section--3">Testimonials</a>
-                    </li>
+                    </li>-->
                     <li class="nav__item">
                         <a class="nav__link"
-                           href="#section--4">Images</a>
+                           href="#section--3">Images</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link nav__link--btn btn--show-modal"
@@ -309,7 +309,7 @@
         <section class="section"
                  id="section--3">
             <div class="section__title section__title--testimonials">
-                <h2 class="section__description">For your eyes.</h2>
+                <h2 class="section__description">For your eyes</h2>
                 <h3 class="section__header">
                     Multiple images made by our customers. Enjoy!
                 </h3>
