--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link href="style/general.css"
               rel="stylesheet">
         <title>Bankist | When Banking meets Minimalist</title>
+
+        <script defer
+                src="script.js"></script>
     </head>
     <body>
         <header class="header">
@@ -406,7 +409,5 @@
             </form>
         </div>
         <div class="overlay hidden"></div>
-
-        <script src="script.js"></script>
     </body>
 </html>
